Initial GUI config fields for slider.min and slider.max
Currently having trouble pulling the min and max values from the
 relevant controller.

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -31,6 +31,8 @@
       "show_track": "Show track?",
       "disable_sliding": "Disable Sliding",
       "force_square": "Force square?",
+      "min": "Minimum value",
+      "max": "Maximum value",
       "tap_action": "Tap Action"
     },
     "action_button": {
